fix: fix z-index value

--- a/src/css/team.css
+++ b/src/css/team.css
@@ -19,7 +19,7 @@
     min-height: 400px;
     border-radius: 15px;    
     flex-wrap: wrap;
-    padding: 0 20px;
+    box-sizing: border-box;
 }
 
 .person {
@@ -43,7 +43,7 @@
     border-radius: 50%;
     top: 152px;
     right: 20px;
-    z-index: 50;
+    z-index: 7;
     background-image: url("../assets/images/crown.svg");
     background-position: center;
     background-repeat: no-repeat;
@@ -63,27 +63,29 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;  
+    align-items: center;
     background-color: #fff;
-    border-radius: 15px; 
+    border-radius: 15px;
     padding: 20px;
     padding-top: 86px;
-    padding: 66px 20px 20px;
-    position: absolute; 
+    padding: 67px 14px 20px;
+    position: absolute;
     top: 180px;
-    box-shadow: 0 0 15px 0 gray;
-    min-width: 150px;
+    box-shadow: 0 0 15px 0 grey;
+    min-width: 210px;
+    min-height: 95px;
 }
 
 .person__fullname {
-    font-size: 22px;
-    line-height: 26px;
-    margin-bottom: 6px;
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 4px;
     text-align: center;
+    font-weight: 700;
 }
 
 .person__role {
-    font-size: 18px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 300;
     line-height: 20px;
@@ -101,7 +103,7 @@
     background-position: center;
     background-size: contain;
     position: relative;
-    z-index: 20;
+    z-index: 5;
     overflow: hidden;
     mask-repeat: no-repeat;
     -webkit-mask-repeat: no-repeat;
@@ -143,5 +145,13 @@
 @media (max-width: 1024px) {
     .team-list {
         width: 100%;
+    }    
+}
+
+@media (max-width: 375px) {
+    .team__title {
+        margin-top: 70px;
+        margin-bottom: 50px;
+        font-size: 36px;
     }    
 }
